--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,1 @@
-node_modules/
-.env
-
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+node_modules
