--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
-  "name": "bookshop-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "engines": {
-    "node": "12.19.0",
-    "npm": "6.14.8"
-  },
+  "name": "node-express",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node ./src/index.js",
-    "test": "jest --watchAll=false",
-    "local": "nodemon src/index.js"
+    "start": "node ./bin/www"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
-    "dotenv": "^8.2.0",
-    "express": "^5.0.0-alpha.8",
-    "pm2": "^4.5.1"
-  },
-  "devDependencies": {
-    "axios-mock-adapter": "^1.19.0",
-    "jest": "^26.6.3",
-    "nodemon": "^2.0.6",
-    "prettier": "2.2.1",
-    "supertest": "^6.0.1"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
