--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,4 +41,4 @@ workflows:
             branches:
               only:
                 - staging
-                - master
+                - MASTER
