--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,6 +4,6 @@ branch-defaults:
 global:
   application_name: Shop
   default_ec2_keyname: devassign
-  default_platform: Node.js 12 running on 64bit Amazon Linux 2/5.2.4
-  default_region: eu-west-1
+  default_platform: Node.js 12 running on 64bit Amazon Linux 2
+  default_region: southeast-1
   sc: git
